# GaussianRenderer

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  GENESIS_INTEGRATION_PLAN.md  MPM_GAUSSIAN_RENDER_PLAN.md  Makefile  README.md  README_zh.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
gaussian_renderer/: __init__.py  gs_renderer_motrixsim.py
src/gaussian_renderer/: __init__.py  batch_splat.py  gs_renderer_motrixsim.py  gs_renderer_mujoco.py  simple_viewer.py  supersplat_compress.py  transform_gs_model.py
src/gaussian_renderer/core/: __init__.py  batch_rasterization.py  gaussiandata.py  gs_renderer.py  super_splat_loader.py  util_gau.py
src/genesis/: __init__.py  _headless.py
src/genesis/engine/: mesh.py  scene.py
src/genesis/engine/entities/: pbd_entity.py
src/genesis/engine/sensors/: __init__.py  raycaster.py
src/genesis/gaussian/: __init__.py  binding.py  config.py  deformation.py  gaussian_asset.py  mpm_scene.py  particle_sampling.py  renderer_bridge.py
src/genesis/options/sensors/: __init__.py
src/genesis/utils/: element.py  mesh.py  mesh_repair.py
tests/: banana.ply  conftest.py  mpm_fall_flower.py  mpm_gaussian_flower_render.py  pbd_fall_flower.py  render_mesh_frames_gif.py  test_gaussiandata.py  test_gs_renderer_deformation.py  test_motrixsim_renderer.py  test_mujoco_renderer.py  test_ply_io.py  test_utils.py  visualize_mesh.py
tests/config/: mpm_gaussian_flower.yaml
